update composer authors

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     "license": "GPL-2.0-only",
     "authors": [
         {
-            "name": "rolandinsh",
-            "homepage": "https://mediabox.lv"
+            "name": "Republa",
+            "homepage": "https://republa.com",
+            "role": "Developer"
         },
         {
             "name": "WordPress"
