--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,9 @@
     "name": "simplemediacode/hooks",
     "description": "Decoupled WordPress Hooks (filters and actions)",
     "type": "library",
+    "version": "1.0.6",
     "require": {
-        "php": "~7.4|~8.0"
+        "php": "~8.0|~8.1|~8.2"
     },
     "license": "GPL-2.0-only",
     "authors": [
@@ -23,15 +24,15 @@
     },
     "minimum-stability": "stable",
     "keywords": [
-      "hooks",
-      "phphook",
-      "phphooks",
-      "wordpress",
-      "php",
-      "php7",
-      "php8"
+        "hooks",
+        "phphook",
+        "phphooks",
+        "wordpress",
+        "php",
+        "php7",
+        "php8"
     ],
     "support": {
-      "issues": "https://github.com/simplemediacode/hooks/issues"
+        "issues": "https://github.com/simplemediacode/hooks/issues"
     }
 }
