--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "simplemediacode/hooks",
     "description": "Decoupled WordPress Hooks (filters and actions)",
     "type": "library",
-    "version": "1.0.7",
+    "version": "1.0.8",
     "require": {
-        "php": "~8.0|~8.1|~8.2"
+        "php": "~8.0|~8.1|~8.2|~8.3|~8.4"
     },
     "license": "GPL-2.0-only",
     "authors": [
