--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "simplemediacode/hooks",
     "description": "Modern PHP Hooks System for PHP applications.",
     "type": "library",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "require": {
         "php": "~8.0|~8.1|~8.2|~8.3|~8.4"
     },
@@ -21,7 +21,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "SimpleMediaCode\\Hooks\\": "src/"
+            "Simplemediacode\\Hooks\\": "src/"
         }
     },
     "minimum-stability": "stable",
